# sensor

./: .gitignore  CMakeLists.txt  Makefile  dbg.sh  run.sh  sensor.conf  valgrind.sh
frontend/: CMakeLists.txt  Makefile  dbg.sh  debug  debug.sh  run.sh
frontend/headers/: arguments.h  dbrelated.h  kvset.h  sensord.h
frontend/source/: Main.py  Sensor.py  arguments.c  arguments.h  dbrelated.c  kvset.c  sensord.c
libsensor/: CMakeLists.txt  Makefile
libsensor/headers/: balancing.h  debug.h  dissect.h  list.h  protocols.h  queue.h  redirect.h  sensor.h  survey.h  tsqueue.h  util.h
libsensor/include/: sensor.h
libsensor/source/: address.hpp  arputil.c  arputil.cpp  arputil.h  arputil.hpp  array.c  array.h  arraylist.c  arraylist.h  balancing.c  balancing.h  bestfit.c  bestfit.h  clock.c  clock.h  debug.c  debug.h  debug.hpp  debugging.c  debugging.cpp  dissect.c  hash.hpp  hashmap.c  hashmap.h  internet_address.cpp  internet_address.hpp  list.c  load_count.c  load_count.h  message_queue.c  message_queue.cpp  message_queue.h  message_queue.hpp  mpsc_queue.hpp  negotiation_model.cpp  negotiation_model.hpp  negotiator.cpp  negotiator.hpp  netinfo.c  netinfo.cpp  (+57 more)
libsensor/source/address/: internet_address.cpp  internet_address.hpp  socket_address.hpp
libsensor/source/base/: circular_buffer.cpp  circular_buffer.hpp  clock.c  clock.h  handle_pool.hpp  hw_address.hpp  internet_address.cpp  internet_address.hpp  random.c  util.h
libsensor/source/mq/: command.hpp  delegate.hpp  future.hpp  int_mpsc_pipe.hpp  int_mpsc_queue.hpp  member_command.hpp  member_msgqueue.hpp  mpsc_pipe.hpp  msgqueue.hpp  waitable.hpp
libsensor/source/net/: arputil.c  arputil.h  netinfo.c  netinfo.h  networking.h  packet_extract.c  packet_extract.h  packet_extract.hpp  pgm_socket_utils.c  pgm_socket_utils.h  socket_buffer.cpp  socket_buffer.hpp  socket_utils.c  socket_utils.h
libsensor/source/reactor/: address.cpp  address.hpp  buffer.hpp  callback.hpp  event_loop.hpp  hashing.hpp  net_system.h  reactor.hpp  socket.cpp  socket.hpp  stream_link.cpp  stream_link.hpp  tcp_acceptor.cpp  tcp_acceptor.hpp  tcp_connector.cpp  tcp_connector.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
libsensor/source/service/: async_msgqueue.hpp  event_system.hpp  lookup_service.cpp  lookup_service.hpp  negotiation_model.cpp  negotiation_model.hpp  negotiation_service.hpp  pgm_transport.hpp  sensor_service.cpp  sensor_service.hpp  sensor_watcher.cpp  sensor_watcher.hpp  service_service.cpp  session_context.cpp  session_context.hpp
libsensor/source/services/: bootstrap.c  bootstrap.h  info.c  info.h  node.c  node.h  prototools.c  prototools.h  services.c  services.h  services_private.h
msgqueue/: member_msgqueue.hpp  msgqueue.hpp
msgqueue/cmd/: caller.hpp  command.hpp  future.hpp  thread_util.hpp  tuple_indexer.hpp
msgqueue/queue/: eventcount.hpp  int_mpsc_pipe.hpp  int_mpsc_queue.hpp  mpsc_pipe.hpp
msgqueue/signal/: signaled_queue.hpp  signaler.hpp
